# game-template

./: Makefile  main.py  pyproject.toml
plugins/client/: __init__.py  events.py  game.py  game_state.py
plugins/component/: information.py  rendering.py  tags.py
plugins/core/: __init__.py  fonts.py  logs.py  settings.py
plugins/event/: __init__.py  event_manager.py
plugins/scene/: base.py
src/: main.py
src/core/: events.py  exceptions.py  game.py  logs.py  scenes.py
src/plugins/client/: __init__.py  game.py
src/plugins/component/: __init__.py  information.py  movement.py  tags.py
src/plugins/core/: __init__.py  game_object.py
src/plugins/scene/: __init__.py  base.py  events.py  lifecycle.py  manager.py  registry.py  stack.py
src/plugins/system/: __init__.py  movement_system.py  player_control_system.py  render_system.py
src/plugins/world/: __init__.py  manager.py
src/scenes/: __init__.py  base.py  city_scene.py  events.py  instance_scene.py  landing_scene.py  lifecycle.py  manager.py  playground_scene.py  registry.py  stack.py  store_scene.py
src/setup/config/: __init__.py
src/state/: __init__.py  game.py  scene.py
src/worlds/: __init__.py  city_level_1_world.py
src/worlds/instances/v1/: __init__.py  blood_moon_forest_world.py
tests/: test_events.py
tests/plugins/: test_game_state.py
